fixed delete button on small screen

--- a/style.css
+++ b/style.css
@@ -53,11 +53,16 @@ body {
 }
 .remove_task_btn {
   font-size: 30px;
+  padding: 0 10px 6px 10px;
   color: #3f3e41;
-  width: 40px;
+  max-width: 50px;
   height: 40px;
   margin-right: 7px;
   border-radius: 20%;
   background: linear-gradient(#64e6b03a, #9198e598);
   border: 2px solid rgba(117, 147, 185, 0.623);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: inline;
 }
